syntax = "proto3";

package kvdb.kvstore;

option java_package = "com.kvdb.proto.kvstore";
option java_multiple_files = true;


service KVService {
  rpc Get (KeyRequest) returns (ValueResponse);
  rpc Set (KeyValueRequest) returns (SetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  // Internal replication RPCs (node-to-node). These should not be called by clients.
  rpc ReplicateSet (ReplicateSetRequest) returns (SetResponse);
  rpc ReplicateDelete (ReplicateDeleteRequest) returns (DeleteResponse);
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Shutdown (ShutdownRequest) returns (ShutdownResponse);
}

message KeyRequest {
  string key = 1;
}

message KeyValueRequest {
  string key = 1;
  string value = 2;
}

message ValueResponse {
  string value = 1;
}

message SetResponse {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
}

// ============================
// Replication (internal)
// ============================

message ReplicateSetRequest {
  string shard_id = 1;
  uint64 epoch = 2;
  string key = 3;
  string value = 4;
  string origin_node_id = 5;
}

message ReplicateDeleteRequest {
  string shard_id = 1;
  uint64 epoch = 2;
  string key = 3;
  string origin_node_id = 4;
}

message PingRequest {
}

message PingResponse {
  string message = 1;
}

message ShutdownRequest {
}

message ShutdownResponse {
  string message = 1;
}